--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <img src="imagens/git.png" alt="logo" />
+      <p>Andrei Dev</p>
 
       <nav>
         <ul>
@@ -20,25 +20,27 @@
         </ul>
 
         <div class="icons-redes-nav">
+
           <a href="https://github.com/Andreisilva-dev" target="_blank"
             ><img src="imagens/github-icon.png" alt="icon-github"
           /></a>
+
           <a href="https://www.linkedin.com/in/andrei-silva07/" target="_blank"
             ><img src="imagens/linkdin.png" alt="logo-linkdin"
           /></a>
+
         </div>
       </nav>
     </header>
     <main>
         <!-- sessao de apresentação -->
       <section class="apresentacao">
+        <div class="meu-rosto">
+            <img src="imagens/rosto.jpeg" alt="rosto">
+        </div>
 
         <div class="titulo-principal">
           <h1>Olá 👋, meu nome é <span>Andrei Silva</span>, construo coisas para web</h1>
-        </div>
-
-        <div class="meu-rosto">
-            <img src="imagens/rosto.png" alt="rosto">
         </div>
 
       </section>
@@ -64,10 +66,81 @@
 
       <!-- sessao projetos -->
       <section class="projetos">
-        <h2>Projects</h2>
-        <p> Technologies I’ve been working with recently</p>
+
+        <article class="subtitulo-projeto">
+            <h2>Projects</h2>
+            <p> Technologies I’ve been working with recently</p>
+        </article>
 
         <div class="cards">
+            <div class="card">
+                <img src="imagens/Rectangle 16.png" alt="foto-card">
+                <article>
+                    <h3>Project Tile goes here</h3>
+                    <p>This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
+                    <div class="links-card">
+                        <p>🔗<a href="#"></a>live Preview</p>
+                        <p><img src="imagens/github-icon.png" alt=""><a href="#">View Code</a></p>
+                        </a></p>
+                    </div>
+                </article>
+            </div>
+
+            <div class="card">
+                <img src="imagens/Rectangle 16.png" alt="foto-card">
+                <article>
+                    <h3>Project Tile goes here</h3>
+                    <p>This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
+                    <div class="links-card">
+                        <p>🔗<a href="#"></a>live Preview</p>
+                        <p><img src="imagens/github-icon.png" alt=""><a href="#">View Code</a></p>
+                        </a></p>
+                    </div>
+                </article>
+            </div>
+
+            <div class="card">
+                <img src="imagens/Rectangle 16.png" alt="foto-card">
+                <article>
+                    <h3>Project Tile goes here</h3>
+                    <p>This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
+                    <div class="links-card">
+
+                        <p>🔗<a href="#"></a>live Preview</p>
+
+                        <p><img src="imagens/github-icon.png" alt=""><a href="#">View Code</a></p>
+                        </a></p>
+
+                    </div>
+                </article>
+            </div>
+
+            <div class="card">
+                <img src="imagens/Rectangle 16.png" alt="foto-card">
+                <article>
+                    <h3>Project Tile goes here</h3>
+                    <p>This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
+                    <div class="links-card">
+                        <p>🔗<a href="#"></a>live Preview</p>
+                        <p><img src="imagens/github-icon.png" alt=""><a href="#">View Code</a></p>
+                        </a></p>
+                    </div>
+                </article>
+            </div>
+
+            <div class="card">
+                <img src="imagens/Rectangle 16.png" alt="foto-card">
+                <article>
+                    <h3>Project Tile goes here</h3>
+                    <p>This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
+                    <div class="links-card">
+                        <p>🔗<a href="#"></a>live Preview</p>
+                        <p><img src="imagens/github-icon.png" alt=""><a href="#">View Code</a></p>
+                        </a></p>
+                    </div>
+                </article>
+            </div>
+
             <div class="card">
                 <img src="imagens/Rectangle 16.png" alt="foto-card">
                 <article>
@@ -84,14 +157,12 @@
       </section>
     </main>
     <footer>
-        <img src="imagens/git.png" alt="">
-
         <div class="informacoes">
             <p>(91) 9 8913-9347</p>
             <p>andrei765silva@gmail.com</p>
-            <a href="#"><img src="imagens/github-icon.png" alt=""></a>
-            <a href="#"><img src="imagens/linkdin.png" alt=""></a>
         </div>
+        <a href="#"><img src="imagens/github-icon.png" alt=""></a>
+        <a href="#"><img src="imagens/linkdin.png" alt=""></a>
     </footer>
   </body>
 </html>
