--- a/index.html
+++ b/index.html
@@ -74,41 +74,41 @@
 
         <div class="cards">
             <div class="card">
-                <img src="imagens/Rectangle 16.png" alt="foto-card">
+                <img src="imagens/tela.png" alt="foto gerador de qrcode">
                 <article>
-                    <h3>Project Tile goes here</h3>
-                    <p>This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
+                    <h3>Gerador de QRcode</h3>
+                    <p>Este projeto é um gerador de QR Code desenvolvido em JavaScript, que utiliza uma API externa para criar códigos QR a partir de qualquer texto ou link inserido pelo usuário</p>
                     <div class="links-card">
-                        <p>🔗<a href="#"></a>live Preview</p>
-                        <p><img src="imagens/github-icon.png" alt=""><a href="#">View Code</a></p>
+                        <p>🔗<a href="https://andreisilva-dev.github.io/Gerador-de-QR-code/" target="_blank">live Preview</a></p>
+                        <p><img src="imagens/github-icon.png" alt=""><a href="https://github.com/Andreisilva-dev/Gerador-de-QR-code" target="_blank">View Code</a></p>
                         </a></p>
                     </div>
                 </article>
             </div>
 
             <div class="card">
-                <img src="imagens/Rectangle 16.png" alt="foto-card">
+                <img src="imagens/tela2.png" alt="foto-card">
                 <article>
-                    <h3>Project Tile goes here</h3>
-                    <p>This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
+                    <h3>Clone Iphone 13</h3>
+                    <p>Este projeto é um clone da página promocional do iPhone 13 Pro, inspirado no site oficial da Apple. Ele foi desenvolvido com HTML, CSS e JavaScript puro, com foco em layout responsivo e interatividade.</p>
                     <div class="links-card">
-                        <p>🔗<a href="#"></a>live Preview</p>
-                        <p><img src="imagens/github-icon.png" alt=""><a href="#">View Code</a></p>
+                        <p>🔗<a href="https://andreisilva-dev.github.io/CLONE-IPHONE-13-PRO/" target="_blank">live Preview</a></p>
+                        <p><img src="imagens/github-icon.png" alt=""><a href="https://github.com/Andreisilva-dev/CLONE-IPHONE-13-PRO" target="_blank">View Code</a></p>
                         </a></p>
                     </div>
                 </article>
             </div>
 
             <div class="card">
-                <img src="imagens/Rectangle 16.png" alt="foto-card">
+                <img src="imagens/tela3.png" alt="foto-card">
                 <article>
-                    <h3>Project Tile goes here</h3>
-                    <p>This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
+                    <h3>E-COMMERCE-TEC</h3>
+                    <p>Este projeto consiste em uma aplicação web de e-commerce desenvolvida com foco em responsividade, interatividade e organização semântica do conteúdo.</p>
                     <div class="links-card">
 
-                        <p>🔗<a href="#"></a>live Preview</p>
+                        <p>🔗<a href="https://andreisilva-dev.github.io/E-COMMERCE-TEC/" target="_blank">live Preview</a></p>
 
-                        <p><img src="imagens/github-icon.png" alt=""><a href="#">View Code</a></p>
+                        <p><img src="imagens/github-icon.png" alt=""><a href="https://github.com/Andreisilva-dev/E-COMMERCE-TEC" target="_blank">View Code</a></p>
                         </a></p>
 
                     </div>
@@ -116,39 +116,39 @@
             </div>
 
             <div class="card">
-                <img src="imagens/Rectangle 16.png" alt="foto-card">
+                <img src="imagens/tela4.png" alt="foto-card">
                 <article>
-                    <h3>Project Tile goes here</h3>
-                    <p>This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
+                    <h3>mensagem do dia</h3>
+                    <p>Esta aplicação exibe uma mensagem do dia em um modal. O modal apresenta uma citação com o autor, e a data é passada dinamicamente.</p>
                     <div class="links-card">
-                        <p>🔗<a href="#"></a>live Preview</p>
-                        <p><img src="imagens/github-icon.png" alt=""><a href="#">View Code</a></p>
+                        <p>🔗<a href="https://andreisilva-dev.github.io/mensagem-do-dia/" target="_blank">live Preview</a></p>
+                        <p><img src="imagens/github-icon.png" alt=""><a href="https://github.com/Andreisilva-dev/mensagem-do-dia" target="_blank">View Code</a></p>
                         </a></p>
                     </div>
                 </article>
             </div>
 
             <div class="card">
-                <img src="imagens/Rectangle 16.png" alt="foto-card">
+                <img src="imagens/tela5.png" alt="foto-card">
                 <article>
-                    <h3>Project Tile goes here</h3>
-                    <p>This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
+                    <h3>Formulario de Evento</h3>
+                    <p>O projeto consiste em um formulário de contato desenvolvido com HTML e CSS, projetado para permitir que usuários enviem mensagens facilmente através de um site.</p>
                     <div class="links-card">
-                        <p>🔗<a href="#"></a>live Preview</p>
-                        <p><img src="imagens/github-icon.png" alt=""><a href="#">View Code</a></p>
+                        <p>🔗<a href="https://andreisilva-dev.github.io/meu-formulario/" target="_blank">live Preview</a></p>
+                        <p><img src="imagens/github-icon.png" alt=""><a href="https://github.com/Andreisilva-dev/meu-formulario" target="_blank">View Code</a></p>
                         </a></p>
                     </div>
                 </article>
             </div>
 
             <div class="card">
-                <img src="imagens/Rectangle 16.png" alt="foto-card">
+                <img src="imagens/tela6.png" alt="foto-card">
                 <article>
-                    <h3>Project Tile goes here</h3>
-                    <p>This is sample project description random things are here in description This is sample project lorem ipsum generator for dummy content</p>
+                    <h3>angelshotels</h3>
+                    <p>O Hostels Angel é um projeto de site dinâmico desenvolvido com HTML, CSS e JavaScript, O site foi projetado para proporcionar uma experiência de usuário fluida e intuitiva</p>
                     <div class="links-card">
-                        <p>🔗<a href="#"></a>live Preview</p>
-                        <p><img src="imagens/github-icon.png" alt=""><a href="#">View Code</a></p>
+                        <p>🔗<a href="https://andreisilva-dev.github.io/angelshotels/" target="_blank">live Preview</a></p>
+                        <p><img src="imagens/github-icon.png" alt=""><a href="https://github.com/Andreisilva-dev/angelshotels" target="_blank">View Code</a></p>
                         </a></p>
                     </div>
                 </article>
