modo desktop aplicado

--- a/index.html
+++ b/index.html
@@ -74,82 +74,73 @@
 
         <div class="cards">
             <div class="card">
-                <img src="imagens/tela.png" alt="foto gerador de qrcode">
+                <img src="imagens/5.png" alt="foto gerador de qrcode">
                 <article>
                     <h3>Gerador de QRcode</h3>
-                    <p>Este projeto é um gerador de QR Code desenvolvido em JavaScript, que utiliza uma API externa para criar códigos QR a partir de qualquer texto ou link inserido pelo usuário</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate laborum nostrum consequuntur unde. Dignissimos fuga asperiores beatae, voluptate voluptas magnam velit! Quaerat odit quam aperiam commodi maiores nemo a repellendus!</p>
                     <div class="links-card">
-                        <p>🔗<a href="https://andreisilva-dev.github.io/Gerador-de-QR-code/" target="_blank">live Preview</a></p>
-                        <p><img src="imagens/github-icon.png" alt=""><a href="https://github.com/Andreisilva-dev/Gerador-de-QR-code" target="_blank">View Code</a></p>
-                        </a></p>
+                        <p>🔗<a href="https://andreisilva-dev.github.io/Gerador-de-QR-code/" target="_blank">live Preview</a></p>    
                     </div>
                 </article>
             </div>
 
             <div class="card">
-                <img src="imagens/tela2.png" alt="foto-card">
+                <img src="imagens/6.png" alt="foto-card">
                 <article>
                     <h3>Clone Iphone 13</h3>
-                    <p>Este projeto é um clone da página promocional do iPhone 13 Pro, inspirado no site oficial da Apple. Ele foi desenvolvido com HTML, CSS e JavaScript puro, com foco em layout responsivo e interatividade.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita vel, nulla ipsum voluptas magni, quibusdam exercitationem quasi esse repellendus minus nisi. Corrupti, doloribus velit unde ad pariatur fugiat cum quas?</p>
                     <div class="links-card">
                         <p>🔗<a href="https://andreisilva-dev.github.io/CLONE-IPHONE-13-PRO/" target="_blank">live Preview</a></p>
-                        <p><img src="imagens/github-icon.png" alt=""><a href="https://github.com/Andreisilva-dev/CLONE-IPHONE-13-PRO" target="_blank">View Code</a></p>
+                  
                         </a></p>
                     </div>
                 </article>
             </div>
 
             <div class="card">
-                <img src="imagens/tela3.png" alt="foto-card">
+                <img src="imagens/1.png" alt="foto-card">
                 <article>
                     <h3>E-COMMERCE-TEC</h3>
-                    <p>Este projeto consiste em uma aplicação web de e-commerce desenvolvida com foco em responsividade, interatividade e organização semântica do conteúdo.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti voluptatum veniam, praesentium, cupiditate mollitia laborum eius totam eum ex quia similique enim ducimus libero rerum soluta eos. Magnam, laudantium. Minus.</p>
                     <div class="links-card">
 
                         <p>🔗<a href="https://andreisilva-dev.github.io/E-COMMERCE-TEC/" target="_blank">live Preview</a></p>
 
-                        <p><img src="imagens/github-icon.png" alt=""><a href="https://github.com/Andreisilva-dev/E-COMMERCE-TEC" target="_blank">View Code</a></p>
-                        </a></p>
 
                     </div>
                 </article>
             </div>
 
             <div class="card">
-                <img src="imagens/tela4.png" alt="foto-card">
+                <img src="imagens/2.png" alt="foto-card">
                 <article>
                     <h3>mensagem do dia</h3>
-                    <p>Esta aplicação exibe uma mensagem do dia em um modal. O modal apresenta uma citação com o autor, e a data é passada dinamicamente.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero tempora, velit dolorum possimus molestiae deserunt earum totam praesentium aperiam vel reiciendis porro perspiciatis ipsam consectetur beatae provident voluptas quod incidunt.</p>
                     <div class="links-card">
                         <p>🔗<a href="https://andreisilva-dev.github.io/mensagem-do-dia/" target="_blank">live Preview</a></p>
-                        <p><img src="imagens/github-icon.png" alt=""><a href="https://github.com/Andreisilva-dev/mensagem-do-dia" target="_blank">View Code</a></p>
-                        </a></p>
                     </div>
                 </article>
             </div>
 
             <div class="card">
-                <img src="imagens/tela5.png" alt="foto-card">
+                <img src="imagens/3.png" alt="foto-card">
                 <article>
                     <h3>Formulario de Evento</h3>
-                    <p>O projeto consiste em um formulário de contato desenvolvido com HTML e CSS, projetado para permitir que usuários enviem mensagens facilmente através de um site.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur placeat nulla sint eaque. Quos reiciendis dolores suscipit sequi vitae voluptatibus deserunt, sit modi eaque tenetur blanditiis doloremque ipsa commodi ab!</p>
                     <div class="links-card">
                         <p>🔗<a href="https://andreisilva-dev.github.io/meu-formulario/" target="_blank">live Preview</a></p>
-                        <p><img src="imagens/github-icon.png" alt=""><a href="https://github.com/Andreisilva-dev/meu-formulario" target="_blank">View Code</a></p>
-                        </a></p>
+
                     </div>
                 </article>
             </div>
 
             <div class="card">
-                <img src="imagens/tela6.png" alt="foto-card">
+                <img src="imagens/4.png" alt="foto-card">
                 <article>
                     <h3>angelshotels</h3>
-                    <p>O Hostels Angel é um projeto de site dinâmico desenvolvido com HTML, CSS e JavaScript, O site foi projetado para proporcionar uma experiência de usuário fluida e intuitiva</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo quae qui rem deleniti dolores distinctio fugit doloremque, ea quasi eius commodi suscipit eos dolorem hic aperiam voluptate harum explicabo. Necessitatibus.</p>
                     <div class="links-card">
                         <p>🔗<a href="https://andreisilva-dev.github.io/angelshotels/" target="_blank">live Preview</a></p>
-                        <p><img src="imagens/github-icon.png" alt=""><a href="https://github.com/Andreisilva-dev/angelshotels" target="_blank">View Code</a></p>
-                        </a></p>
                     </div>
                 </article>
             </div>
@@ -157,12 +148,17 @@
       </section>
     </main>
     <footer>
+
         <div class="informacoes">
             <p>(91) 9 8913-9347</p>
             <p>andrei765silva@gmail.com</p>
         </div>
-        <a href="#"><img src="imagens/github-icon.png" alt=""></a>
-        <a href="#"><img src="imagens/linkdin.png" alt=""></a>
+
+        <div class="icons-footer">
+          <a href="https://www.linkedin.com/in/andrei-silva07/" target="_blank"><img src="imagens/github-icon.png" alt=""></a>
+          <a href="https://github.com/Andreisilva-dev" target="_blank"><img src="imagens/linkdin.png" alt=""></a>
+        </div>
+
     </footer>
   </body>
 </html>
