projeto Pix adicionado

--- a/index.html
+++ b/index.html
@@ -121,6 +121,18 @@
             </div>
 
             <div class="card">
+                <img src="imagens/7.png" alt="foto-card">
+                <article>
+                    <h3>Sistema de Compras</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur placeat nulla sint eaque. Quos reiciendis dolores suscipit sequi vitae voluptatibus deserunt, sit modi eaque tenetur blanditiis doloremque ipsa commodi ab!</p>
+                    <div class="links-card">
+                        <p>🔗<a href="https://andreisilva-dev.github.io/Calculadora-de-Pix/" target="_blank">live Preview</a></p>
+
+                    </div>
+                </article>
+            </div>
+
+            <div class="card">
                 <img src="imagens/3.png" alt="foto-card">
                 <article>
                     <h3>Formulario de Evento</h3>
