site apreser adicionado

--- a/index.html
+++ b/index.html
@@ -154,6 +154,17 @@
                     </div>
                 </article>
             </div>
+
+            <div class="card">
+                <img src="imagens/apreser.png" alt="foto-card">
+                <article>
+                    <h3>apresers</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo quae qui rem deleniti dolores distinctio fugit doloremque, ea quasi eius commodi suscipit eos dolorem hic aperiam voluptate harum explicabo. Necessitatibus.</p>
+                    <div class="links-card">
+                        <p>🔗<a href="https://andreisilva-dev.github.io/web-site_aprenser/" target="_blank">live Preview</a></p>
+                    </div>
+                </article>
+            </div>
         </div>
       </section>
     </main>
