card do sistema condominio adicionado

--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
             </div>
 
             <div class="card">
-                <img src="imagens/4.png" alt="foto-card">
+                <img src="imagens/cad.png" alt="foto-card">
                 <article>
-                    <h3>angelshotels</h3>
+                    <h3>sistema Condominio</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo quae qui rem deleniti dolores distinctio fugit doloremque, ea quasi eius commodi suscipit eos dolorem hic aperiam voluptate harum explicabo. Necessitatibus.</p>
                     <div class="links-card">
-                        <p>🔗<a href="https://andreisilva-dev.github.io/angelshotels/" target="_blank">live Preview</a></p>
+                        <p>🔗<a href="https://andreisilva-dev.github.io/Cadastro-de-Condom-nios/" target="_blank">live Preview</a></p>
                     </div>
                 </article>
             </div>
